--- a/.gitignore
+++ b/.gitignore
@@ -184,3 +184,5 @@ typings/
 
 
 # End of https://www.gitignore.io/api/node
+Improving your App with Filters and Mixins/.DS_Store
+Improving your App with Filters and Mixins/src/.DS_Store
